# spetals

./: .gitignore  auth.config.json  data.db  gardn.bat  index.html
.continue/rules/: always-read-file-before-edit.md  always-update-client-cmake-when-adding-titlescreen-files.md  batch-env-loader.md  c-edit-hygiene.md  c-edits-safety.md  cmake-updates.md  code-block-headers.md  delete-dup-petal-files.md  renderer-code-placement.md
Client/: AccountLevel.cc  AccountLevel.hh  CMakeLists.txt  DOM.cc  Game.cc  Game.hh  Network.cc  Rendering.cc  Setup.cc  Socket.cc  StaticData.cc  Storage.cc  Storage.hh
Client/Assets/: Crown.cc  Flower.cc  Petal.cc
Client/Assets/Petals/: AntEgg.cc  Antennae.cc  Azalea.cc  Basic.cc  BeetleEgg.cc  Bone.cc  Bubble.cc  Cactus.cc  Corn.cc  Cutter.cc  Dahlia.cc  Dandelion.cc  Faster.cc  GoldenLeaf.cc  Heaviest.cc  Heavy.cc  Iris.cc  LPeas.cc  Leaf.cc  Light.cc  Lotus.cc  Missile.cc  None.cc  Peas.cc  Petals.hh  Pincer.cc  PoisonCactus.cc  PoisonPeas.cc  PoisonTricac.cc  Pollen.cc  Powder.cc  Rice.cc  Rock.cc  Rose.cc  Salt.cc  Sand.cc  Soil.cc  Square.cc  Stick.cc  Stinger.cc  (+13 more)
Client/Render/: RenderFlower.cc  RenderHealth.cc  RenderMob.cc  RenderName.cc  RenderPetal.cc
Client/Ui/InGame/: AccountLevelBar.cc  GameInfo.hh  Leaderboard.cc  LevelBar.cc  Tooltip.cc
Client/Ui/TitleScreen/: DeathScreen.cc  Leaderboard.cc  MainScreen.cc  MobGallery.cc  PetalGallery.cc  Settings.cc  TitleScreen.hh
Server/: AccountLink.cc  AccountLink.hh  AuthDB.cc  AuthDB.hh  CMakeLists.txt  Client.cc  Client.hh  GalleryStore.cc  GalleryStore.hh  Game.cc  Game.hh  Native.cc  PerSocketData.hh  Server.cc  Simulation.cc  Spawn.cc  Wasm.cc  config.json  package-lock.json  package.json
Server/Account/: AccountLevel.cc  AccountLevel.hh  AccountLevel.proto  AccountLink.cc  AccountLink.hh  WasmAccountStore.cc  WasmAccountStore.hh  WasmBridge.hh  WasmGalleryStore.cc  WasmGalleryStore.hh  WasmPetalGalleryStore.cc  WasmPetalGalleryStore.hh
Server/Bots/: BotManager.cc  BotManager.hh  ForwardShims.cc  ForwardShims.hh  Priorities.cc  Priorities.hh
Server/EntityFunctions/: Damage.cc  Death.cc
Server/Process/: Ai.cc  Collision.cc  Flower.cc  FlowerAi.cc  Motion.cc  Petal.cc
Server/auth/: data.db-shm  data.db-wal  package-lock.json  package.json  server.js
Shared/: Arena.hh  Binary.hh  Config.cc  EntityDef.hh  Map.cc  StaticData.cc  StaticData.hh  StaticDefinitions.hh
